# TestBotShop

./: .dockerignore  Dockerfile  README.md  create_pay.py  db.json  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  save_to_excel.py
TestBotShop/: asgi.py  settings.py  urls.py  wsgi.py
bot/: README.md  admin.py  models.py
bot/management/commands/: runbot.py
bot/tg_aiogram/: callback_factory.py  pagination.py
bot/tg_aiogram/configure_bot/: commands.py
bot/tg_aiogram/heandlers/: apchendler.py  catalog.py  faq.py  shop_cart.py
bot/tg_aiogram/keyboards/: inline.py  reply.py
