[tool.poetry]
name = "testbotshop"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <pavelmazikinvladimirovich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
redis = "^5.0.1"
aiogram = "^3.3.0"
pillow = "^10.2.0"
yookassa = "^3.0.1"
apscheduler = "^3.10.4"
apscheduler-di = "^0.1.0"
openpyxl = "^3.1.2"
faker = "^23.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
